# memorang-assessment

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  assessment.md  docker-compose.yml  plan.md
.github/workflows/: agent.yml  frontend.yml
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/agent/: errors.py  graph.py  mcq_public.py  mcq_schema.py  pdf.py  plan_schema.py  server.py  state.py  utils.py
agent/agent/nodes/: approve.py  ask_mcq.py  generate_mcq.py  grade.py  ingest_plan.py  prebatch_mcqs.py  summary.py  tutor.py
agent/scripts/: make_sample_pdf.py
agent/tests/: test_graph.py  test_health.py  test_mcq_public.py  test_mcq_schema.py  test_pdf.py  test_plan_schema.py  test_server.py  test_utils.py
docs/: mcq-state-simplification.md  spike-notes.md
docs/agents/: domain.md
docs/superpowers/plans/: 2026-06-05-mcq-quiz.md  2026-06-05-pdf-upload-lesson-plan.md  2026-06-09-progress-sidebar.md
docs/superpowers/specs/: 2026-06-05-full-quiz-loop-summary-design.md  2026-06-05-mcq-quiz-design.md  2026-06-09-progress-sidebar-design.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/extract/: route.ts
frontend/components/: CopilotKitProvider.tsx  EchoInterrupt.tsx  ErrorCard.tsx  LessonPlan.tsx  LessonPlanApproval.tsx  McqWidget.tsx  ObjectiveList.tsx  PdfUpload.tsx  ProgressSidebar.tsx  Summary.tsx
frontend/lib/: agent.ts  agentState.ts  keys.ts  markdownComponents.tsx  parseInterrupt.ts  sessionPhase.ts  types.ts  useSessionManager.ts
(+14 files in other folders)
