[project]
name = "agent"
version = "0.1.0"
description = "AI Learning Agent — Python LangGraph service"
requires-python = ">=3.12"
dependencies = [
  "copilotkit==0.1.94",
  "ag-ui-langgraph[fastapi]==0.0.38",
  "langgraph==1.2.4",
  "langgraph-checkpoint-postgres==3.1.0",
  "langchain-openai>=0.3.0",
  "langchain>=1.2.0",
  "fastapi>=0.115.5,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "openai>=1.0.0,<2.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
